# ai-gauge

./: .gitignore  AI Gauge-datasheet.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  RELEASING.md  SECURITY.md  build.ps1  build.sh  pyinstaller_entry.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_layout_broken.yml
.github/workflows/: release.yml  test.yml
docs/: ui-scale-widget-only-plan.md
src/aigauge/: app.py  config.py  cookie_dialog.py  error_dialog.py  history.py  logging_setup.py  macos_status_item.py  menubar.py  models.py  ratio.py  ratio_dialog.py  secret_storage.py  settings_dialog.py  startup.py  widget.py
src/aigauge/providers/: _common.py  _scrape_runner.py  claude.py  codex.py  copilot.py  idle.py  openrouter.py
src/aigauge/webview/: cookies.py  login_window.py  page.py  profile.py  scraper.py  verify.py
src/usage_view/: __main__.py  app.py  config.py  cookie_dialog.py  history.py  logging_setup.py  models.py  secret_storage.py  settings_dialog.py  startup.py  widget.py
src/usage_view/providers/: base.py  claude.py  codex.py  copilot.py  diagnostics.py  idle.py
src/usage_view/webview/: cookies.py  login_window.py  page.py  profile.py  scraper.py  verify.py
tests/: conftest.py  test_app.py  test_claude.py  test_codex.py  test_config.py  test_cookies.py  test_copilot.py  test_history.py  test_idle.py  test_login_window.py  test_menubar.py  test_models.py  test_openrouter.py  test_pat_storage.py  test_platforms.py  test_provider_diagnostics.py  test_ratio.py  test_ratio_dialog.py  test_scrape_runner.py  test_scraper.py  test_secret_storage.py  test_settings_dialog.py  test_startup.py  test_webview_page.py  test_widget.py
tools/: check_versions.py  wdsi_submission.py  write_pyinstaller_version_info.py
