[project]
name = "usage-view"
version = "0.3.1"
description = "Compact always-on-top monitor for Claude.ai, ChatGPT Codex, and GitHub Copilot usage limits."
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.7",
    "PyQt6-WebEngine>=6.7",
    "requests>=2.32",
    "pydantic>=2.6",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "responses>=0.25",
    "pyinstaller>=6.6",
]

[project.scripts]
usage-view = "usage_view.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usage_view"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"
