[project]
name = "ai-gauge"
version = "0.5.9"
description = "Compact always-on-top monitor for Claude.ai, ChatGPT Codex, and GitHub Copilot usage limits."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "AI Gauge maintainers" }]
keywords = ["ai", "desktop", "usage-monitor", "claude", "codex", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.7,<7",
    "PyQt6-WebEngine>=6.7,<7",
    "requests>=2.32",
    "pydantic>=2.6",
    "keyring>=25.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/jpajak/ai-gauge"
Repository = "https://github.com/jpajak/ai-gauge"
Issues = "https://github.com/jpajak/ai-gauge/issues"
Security = "https://github.com/jpajak/ai-gauge/security"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "responses>=0.25",
    "pyinstaller>=6.6",
]

[project.scripts]
ai-gauge = "aigauge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aigauge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"
